Fix horizontal scroll

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -36,6 +36,7 @@ body{
     display:block;
     margin: 0;
     font-family: 'Lato', sans-serif;
+    overflow-x:hidden;
 }
 #navbar{
     display : flex;
@@ -307,11 +308,13 @@ span{
     color:white;
 }
 footer{
+    width:100vw;
     align-items: center;
     background-color: #263146;
     color: white;
     padding-top:1em;
     padding-bottom:1em;
     padding-left: 13%;
+    margin-bottom: 0;
 }
 
